# ShoppingList

./: .dockerignore  .env  Cargo.toml  Dockerfile  LICENSE.  Notes  docker-compose-db.yml  docker-compose.yml  sqlx-data.json
backend/: Cargo.toml  sqlx-data.json
backend/src/: main.rs  routes.rs  types.rs
backend/src/route/: items.rs  location.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs  server_response.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  views.rs
frontend/src/components/: mod.rs
frontend/src/components/blocks/: text_input.rs
frontend/src/components/views/: item.rs  locations.rs  mod.rs  navbar.rs  overview.rs
migrations/: 20230510190952_init.down.sql  20230510190952_init.up.sql
scripts/: db-test-data.sql
